# Proyecto-linea-de-produccion-simulacion

./: README.md  debug_cajas.py  debug_random.py  debug_streamlit.py  event_driven_simulation.py  event_driven_streamlit_app.py  index.py  requirements.txt  streamlit_app.py  test_nuevas_unidades.py  test_sistema_completo.py  test_streamlit_final.py
aleatorios/: README.md  pyproject.toml  test_random_quality.py
aleatorios/src/modelos/: __init__.py  exceptions.py  linear_congruence.py  random_wrapper.py  validated_random.py
aleatorios/src/modelos/pruebas/: average_test.py  chi2_test.py  chi_square_test.py  ks_test.py  poker_test.py  variance_test.py
aleatorios/tests/: __init__.py  test_linear_congruence.py  test_validated_random.py
