[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modelos_rng_validated"
version = "0.1.0"
authors = [ { name = "Alex", email = "alex.hernandez27@uptc.edu.co" } ]
description = "Generador LCG con validación estadística integrada"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Development Status :: 3 - Alpha"
]
dependencies = [ "numpy>=1.20", "scipy>=1.7" ]

[tool.setuptools.packages.find]
where = ["src"]